# ocaml-backend

./: .envrc  LICENSE  README.md  docker-compose.yml  dune-project  flake.nix  ocaml_backend.opam  sqitch.conf
db/: sqitch.plan
db/deploy/: 1__add_app_schema.sql  2__add_point_table.sql
db/revert/: 1__add_app_schema.sql  2__add_point_table.sql
db/verify/: 1__add_app_schema.sql  2__add_point_table.sql
lib/: db.ml  db.mli  dune  point.ml  point.mli  server.ml  server.mli  sum.ml
script/: migrate.sh  revert.sh
src/: dune  main.ml
test/: dune  sum_test.ml  test.ml
